forth/test/fail/test_const_fold_udiv_zero.af
use' ../../lang.af
fun: .test_const_fold_udiv_zero { -- out } 29 0 u/ end
